[package]
name = "yara-x"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
# Enables constant folding. When constant folding is enabled, expressions
# like `2+2+2` and `true or false`, whose value can be determined at compile
# time, will be reduced to its final value, instead of producing code that
# actually computes the expression.
constant-folding = []

# Enables the use of FastVM for matching regular expression, as an alternative
# to PikeVM. This feature is enabled by default, and its purpose is disabling
# the fast regexp matching mechanism for testing purposes.
fast-regexp = []

# Enables debug logs.
logging = ["dep:log"]

# Enables rules profiling. When this is enabled together with `logging` the
# logs will contain information about the most expensive rules after each 
# scan. Notice that profiling itself has an noticeable impact on performance.
rules-profiling = ["logging"]

# Features for enabling/disabling modules.
#
# For each module we have a `<module name>-module` feature that controls whether
# a given module is built or not. For instance, if the feature `foo-module` is
# enabled, the module `foo` will be built into YARA.

# The `elf` module parses ELF files.
elf-module = [
    "dep:tlsh"
]

# The `hash` module provides functions for computing md5, sha1 and sha-256
# hashes.
hash-module = [
    "dep:md5",
    "dep:sha1",
    "dep:sha2",
]

# The `lnk` module parses LNK files.
lnk-module = [
    "dep:uuid",
]

# The `macho` module parses Mach-O files.
macho-module = [
    "dep:byteorder",
    "dep:nom",
    "dep:arrayref",
]

# The `string` modules offer some functions for parsing strings as integers,
# determining a string length, etc.
string-module = []

# Test modules to be used only in test cases.
test_proto2-module = []
test_proto3-module = []

# The `text` module is an example module described in the Module's Developer
# Guide. Not very useful in real life.
text-module = [
    "dep:lingua"
]

# The `time` module allows you to retrieve epoch in seconds that can be used in
# conditions of a rule to check againts other epoch time.
time-module = []


# Features that are enabled by default.
default = [
    "constant-folding",
    "fast-regexp",
    "elf-module",
    "macho-module",
    "hash-module",
    "time-module",
    "lnk-module",
    "test_proto2-module",
    "test_proto3-module",
]

[dependencies]
aho-corasick = { workspace = true, features=["logging"] }
anyhow = { workspace = true }
ariadne = { workspace = true }
arrayref = { workspace = true, optional = true }
ascii_tree = { workspace = true}
base64 = { workspace = true }
bincode = { workspace = true }
bitmask = { workspace = true }
bitvec = { workspace = true }
bstr = { workspace = true, features=["serde"] }
byteorder = { workspace = true, optional = true }
fmmap = { workspace = true }
indexmap = { workspace = true, features=["serde"] }
intaglio = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
linkme = { workspace = true }
log = { workspace = true, optional = true }
md5 = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
memchr = { workspace = true }
memx = { workspace = true }
nom = { workspace = true, optional = true }
num = { workspace = true }
protobuf = { workspace = true }
rustc-hash = { workspace = true }
regex-syntax = { workspace = true }
regex-automata = { workspace = true }
smallvec = { workspace = true, features=["serde"] }
serde = { workspace = true, features=["rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tlsh = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["v4"] }
walrus = { workspace = true }
wasmtime = { workspace = true, features=["cranelift", "parallel-compilation"]  }
yansi = { workspace = true }
yara-x-macros = { workspace = true }
yara-x-parser = { workspace = true }
yara-x-proto = { workspace = true }

lingua = { version = "1.4.0", optional = true, default-features = false, features = ["english", "german", "french", "spanish"] }

[build-dependencies]
protobuf = { workspace = true }
protobuf-codegen = { workspace = true }
protobuf-parse = { workspace = true }
yara-x-proto = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
globwalk = { workspace = true }
ihex = "3.0.0"
goldenfile = "1.5.2"
pretty_assertions = { workspace = true }
wasmprinter = "0.2.62"
yara = { version = "0.19.0", features = ["vendored"] }

[[bench]]
name = "benches"
harness = false
