[package]
name = "yara-x-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.yara-x]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "macho_parser"
path = "fuzz_targets/macho_parser.rs"
test = false
doc = false

[[bin]]
name = "lnk_parser"
path = "fuzz_targets/lnk_parser.rs"
test = false
doc = false

[[bin]]
name = "elf_parser"
path = "fuzz_targets/elf_parser.rs"
test = false
doc = false

[[bin]]
name = "pe_parser"
path = "fuzz_targets/pe_parser.rs"
test = false
doc = false

[[bin]]
name = "dotnet_parser"
path = "fuzz_targets/dotnet_parser.rs"
test = false
doc = false

[[bin]]
name = "crx_parser"
path = "fuzz_targets/crx_parser.rs"
test = false
doc = false

[[bin]]
name = "rule_compiler"
path = "fuzz_targets/rule_compiler.rs"
test = false
doc = false
