[package]
name = "yara-x-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.yara-x]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "macho_parser"
path = "fuzz_targets/macho_parser.rs"
test = false
doc = false

[[bin]]
name = "macho_fat_parser"
path = "fuzz_targets/macho_fat_parser.rs"
test = false
doc = false

[[bin]]
name = "lnk_parser"
path = "fuzz_targets/lnk_parser.rs"
test = false
doc = false